@@ -53,6 +53,7 @@ importFrom(doParallel,registerDoParallel)
 importFrom(doParallel,stopImplicitCluster)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(geosphere,bearing)
 importFrom(ggmap,get_map)
 importFrom(ggmap,ggmap)
 importFrom(ggplot2,aes)
