@@ -25,4 +25,6 @@ Calculate distance between points y and z and turning angle between points x, y,
 \details{
 Used in \code{\link{prepData}} and \code{\link{simData}} to get distance and turning angle covariates 
 between locations (x1,x2), (y1,y2) and activity center (z1,z2).
+
+If \code{type='LL'} then distance is calculated as great circle distance using \code{\link[sp]{spDistsN1}}, and turning angle is calculated based on initial bearings using \code{\link[geosphere]{bearing}}.
 }
